--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
           <legend><strong>Iniciar sesion</strong></legend>
           <div class="mb-3">
             <label for="disabledTextInput" class="form-label">ingrese email</label>
-            <input type="email" id="disabledTextInput" class="form-control" name="email" placeholder="example:juanitolaguna@gmail.com">
+            <input type="email" id="" class="form-control" name="email" placeholder="example:juanitolaguna@gmail.com">
           </div>
           <label for="inputPassword5" class="form-label">Password</label>
           <input type="password" id="inputPassword5" class="form-control" name="password" aria-describedby="passwordHelpBlock">
