--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -131,7 +131,7 @@
         electricidad.</p>
     </div>
 <div class="btnquestion">
-    <a href="/cuestionario?" class="btn btn-primary">Ir al cuestionario</a>
+    <a href="/cuestionario?question=1" class="btn btn-primary">Ir al cuestionario</a>
   </div>
   </section>
 
@@ -218,7 +218,7 @@
             </ul>
     </div>
    <div class="btnquestion">
-    <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+    <a href="/cuestionario?question=2" class="btn btn-primary">Ir al cuestionario</a>
   </div>
   </section>
   <!-- medidas contra incendios -->
@@ -291,7 +291,7 @@
         Disponé siempre de elementos para apagarlo (tierra/agua).</p>
     </div>
     <div class="btnquestion">
-    <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+    <a href="/cuestionario?question=3" class="btn btn-primary">Ir al cuestionario</a>
   </div>
   </section>
   <!-- hidrocultivo -->
@@ -375,7 +375,7 @@
            <p>Un listado de todas las especies que podés usar, un video con el paso a paso para llevarlo a cabo y todas las recomendaciones necesarias para que tu cultivo sea un éxito, ¿qué más se puede pedir?</p>
     </div>
     <div class="btnquestion">
-      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+      <a href="/cuestionario?question=4" class="btn btn-primary">Ir al cuestionario</a>
     </div>
   </section>
 
@@ -537,7 +537,7 @@
       </p>
     </div>
     <div class="btnquestion">
-      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+      <a href="/cuestionario?question=6" class="btn btn-primary">Ir al cuestionario</a>
     </div>
   </section>
   <!-- flora -->
@@ -613,7 +613,7 @@
 
     </div>
     <div class="btnquestion">
-      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+      <a href="/cuestionario?question=7" class="btn btn-primary">Ir al cuestionario</a>
     </div>
   </section>
   <!-- reciclaje -->
@@ -680,7 +680,7 @@
      </ul>
     </div>
     <div class="btnquestion">
-      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+      <a href="/cuestionario?question=8" class="btn btn-primary">Ir al cuestionario</a>
     </div>
   </section>
   <!-- planta tu arbol -->
