--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -61,7 +61,7 @@
           </li>
         </ul>
         <div class="d-flex ">
-          <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+          <span class="nav-link" th:if="${session.usuariosession!=null}" th:text="${usuario.puntos+ ' puntos'}"></span>
         </div>
         <div class="d-flex">
           <a class="cerrar" href="/logout">cerrar sesion</a>
