--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -66,6 +66,9 @@
         <div class="d-flex">
           <a class="cerrar" href="/logout">cerrar sesion</a>
         </div>
+        <div class="d-flex configurar">
+          <a class="bi bi-gear" href="/editarusuario"></a>
+        </div>
       </div>
     </div>
   </nav>
@@ -297,11 +300,12 @@
   <!-- hidrocultivo -->
   <section id="hidrocultivo" th:if="${valor}=='4'">
     
-    <div class="position">
-      <h1>¿que es hidroponia?</h1>
-    </div>
+  
     <div class="banner">
-    <img src="/images/hidrocultivo.jpg" alt="" title="" >
+    <img src="/images/hidroponia.jpg" alt="" title="" >
+  </div>
+  <div class=" center">
+    <h1>¿que es hidroponia?</h1>
   </div>
     <hr>
 
