--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link href="/styles/style.css" rel="stylesheet">
+    <link href="/styles/otoño.css" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
@@ -56,11 +58,17 @@
             <div class="d-flex ">
               <a class="cerrar" href="/logout">cerrar sesion</a>
             </div>
+            <div class="d-flex configurar">
+              <a class="bi bi-gear" href="/editarusuario"></a>
+            </div>
           </div>
         </div>
       </nav>
 
       <!-- inicio seccion -->
+      <div class="container-otoño" id="container-otoño">
+      <div class="seccioncomunidad otoño">
+
       <div class="usuario" th:each="usuario:${listaUsuarios}">
       <div class="row featurette">
         <div class="col-md-3 ">
@@ -73,18 +81,20 @@
 
         </div>
         <div class="col-md-9" >
-            <h2 class="featurette-heading"><i  th:text = "${usuario.nombre}" ></i> <i th:text = "${usuario.apellido}"></i> ,<i th:value = "${usuario.edad}" th:text = "${usuario.edad}"></i> </h2>
+            <h2 class="featurette-heading"><i  th:text="${usuario.nombre+ ' '+ usuario.apellido+', '+ usuario.edad+ ' años.'}"></i> </h2>
           <h3><i th:text = "${usuario.arbol.nombre}" ></i>, <i th:text = "${usuario.arbol.puntos}"></i> puntos</h3>
           <div class="verarbol">
-            <a href="#" class="btn btn-success ">Ver arbol <i class="bi bi-arrow-right"></i></a>
+            <a th:href="@{'perfiles/'+ ${usuario.id}} " class="btn btn-success ">Ver arbol <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
     </div>
       </div>
+      </div>
+    </div>
   
         <!-- inicio del foooter parte de abajo de la pantalla -->
      
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
@@ -97,6 +107,8 @@
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
         </ul>
       </footer>
+      <script src="/scripts/otonio.js" type="text/javascript"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
