--- a/src/main/resources/templates/cuestionario.html
+++ b/src/main/resources/templates/cuestionario.html
@@ -52,6 +52,9 @@
             <div class="d-flex">
               <a class="cerrar" href="/logout">cerrar sesion</a>
             </div>
+            <div class="d-flex configurar">
+              <a class="bi bi-gear" href="/editarusuario"></a>
+            </div>
           </div>
         </div>
       </nav>
@@ -229,6 +232,7 @@
 </section>
 
 <!-- fin cuestionario -->
+
 <!-- energia eolica comienzo -->
 <section class="seccionCuestionario" th:if="${question}==1">
 <form class="cuestionario" th:action="@{'gestionar2/' + ${usuario.id}}" method="POST">
@@ -241,7 +245,7 @@
  <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadio1" value="0" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
-    Eenegia que se obtiene atraves de las corrientes de agua  </label>
+    Eenrgia que se obtiene atraves de las corrientes de agua  </label>
 </div>
 <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadio1" value="1" id="flexRadioDefault3">
