--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,6 +47,8 @@
           </div>
         </div>
       </nav>
+
+      <section class="fondo">
      <!-- mensaje -->
       <div class="formulario">
       <div th:if="${error}!=null" class="alert alert-danger mb-3" >
@@ -60,6 +62,7 @@
           <h5 class="card-title">Cerrar sesion</h5>
             <p class="card-text" th:text="${logout}"></p>
         </div>
+        
     </div>
     <div class="alert alert-success w-25 d-flex justify-content-center" th:if="${exito != null}" th:text="${exito}" role="alert">
     </div>
@@ -78,13 +81,13 @@
           </div>
           <button type="submit" class="btn btn-success">Iniciar</button>
       </form>
-
+    </section>
         
 
       
 
       <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
           <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
               <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
