--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -51,6 +51,8 @@
           </div>
         </div>
       </nav>
+
+      <section class="fondo">
          <!--inicio de formulario--> 
          <form class="formulario" action="/registro" method="POST">
               <legend><strong>Registrate para cambiar el mundo</strong></legend>
@@ -86,12 +88,12 @@
               <button type="submit" class="btn btn-success">registrar</button>
        
           </form>
-         
+      </section>
 
 
       <!--footers pie de pagina--> 
 
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
