--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -33,10 +33,12 @@ background-image: url(/images/bgbanner.jpg);
 box-sizing: border-box;
 }
 .video{
-  width: 80%;
+  width: 100%;
   padding: 10px;
-background-color: #dcedc8;
-margin: 10px auto !important;
+background-image: url(/images/hojas.jpg);
+background-repeat: no-repeat;
+margin: auto ;
+background-size: cover;
 }
 .arbol{
   width: 800px;
@@ -54,6 +56,12 @@ margin: 10px auto !important;
 }
 .negrita{
 font-weight: bolder;
+}
+.leyenda{
+  border: 5px solid rgb(0, 162, 255);
+  margin-top: 140px;
+  border-radius: 10px;
+  font-size: 28px;
 }
 
 .configurar{
