--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -59,8 +59,18 @@
               <a class="cerrar" href="/logout">cerrar sesion</a>
             </div>
             <div class="d-flex configurar">
-              <a class="bi bi-gear" href="/editarusuario"></a>
-            </div>
+
+              <div class="btn-group">
+                <button type="button"  class="bi bi-gear" data-bs-toggle="dropdown" aria-expanded="false">
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-light">
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar infromación</a></li>
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=2">Cambiar foto</a></li>
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=3">Cambiar contraseña</a></li>
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=4">Editar árbol</a></li>
+                </ul>
+              </div>
+          </div>
           </div>
         </div>
       </nav>
@@ -68,6 +78,7 @@
       <!-- inicio seccion -->
       <div class="container-otoño" id="container-otoño">
       <div class="seccioncomunidad otoño">
+
 
       <div class="usuario" th:each="usuario:${listaUsuarios}">
       <div class="row featurette">
@@ -82,7 +93,9 @@
         </div>
         <div class="col-md-9" >
             <h2 class="featurette-heading"><i  th:text="${usuario.nombre+ ' '+ usuario.apellido+', '+ usuario.edad+ ' años.'}"></i> </h2>
-          <h3><i th:text = "${usuario.arbol.nombre}" ></i>, <i th:text = "${usuario.arbol.puntos}"></i> puntos</h3>
+          <h3 th:if="${usuario.arbol.nombre}!=null"><i th:text = "${usuario.arbol.nombre}" ></i>, <i th:text = "${usuario.arbol.puntos}"></i> puntos</h3>
+          <h3 th:if="${usuario.arbol.nombre}==null"> árbol sin nombre, <i th:text = "${usuario.arbol.puntos}"></i> puntos.</h3>
+
           <div class="verarbol">
             <a th:href="@{'perfiles/'+ ${usuario.id}} " class="btn btn-success ">Ver arbol <i class="bi bi-arrow-right"></i></a>
           </div>
