--- a/src/main/resources/templates/perfiles.html
+++ b/src/main/resources/templates/perfiles.html
@@ -69,8 +69,18 @@
           <a class="cerrar" href="/logout">cerrar sesion</a>
         </div>
         <div class="d-flex configurar">
-          <a class="bi bi-gear" href="/editarusuario"></a>
-        </div>
+
+          <div class="btn-group">
+            <button type="button"  class="bi bi-gear" data-bs-toggle="dropdown" aria-expanded="false">
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-light">
+              <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar infromación</a></li>
+              <li><a class="dropdown-item" href="/editarusuario?opcion=2">Cambiar foto</a></li>
+              <li><a class="dropdown-item" href="/editarusuario?opcion=3">Cambiar contraseña</a></li>
+              <li><a class="dropdown-item" href="/editarusuario?opcion=4">Editar árbol</a></li>
+            </ul>
+          </div>
+      </div>
       </div>
     </div>
   </nav>
