--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo1">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <title>Planetseed</title>
 </head>
 <body>
@@ -73,10 +77,14 @@
                 <input type="text" id="disabledTextInput" name="email" th:value="*{email}"  class="form-control" placeholder="example:juanitolaguna@gmail.com">
               </div>
               <label for="inputPassword5"  class="form-label">Password</label>
-              <input type="password" id="inputPassword5" name="password" th:value="*{password}"   class="form-control" aria-describedby="passwordHelpBlock">
-              <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-              </div>
+  <div class="input-group">
+            <input ID="txtPassword" type="Password" name="password" Class="form-control">
+            <div class="input-group-append">
+                  <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
+                </div>
+          </div>
+                <div id="passwordHelpBlock" class="form-text">
+                  Su contraseña debe tener mas de 3 caracteres, contener letras y números, y no debe contener espacios, caracteres especiales ni emoji.              </div>
               
               <div class="alert alert-success" role="alert" th:if="${exito}!=null">
                 <p th:text="${exito}"></p>
@@ -108,6 +116,25 @@
         </ul>
       </footer>
 
+      <script type="text/javascript">
+        function mostrarPassword(){
+            var cambio = document.getElementById("txtPassword");
+            if(cambio.type == "password"){
+              cambio.type = "text";
+              $('.icon').removeClass('fa fa-eye-slash').addClass('fa fa-eye');
+            }else{
+              cambio.type = "password";
+              $('.icon').removeClass('fa fa-eye').addClass('fa fa-eye-slash');
+            }
+          } 
+          
+          $(document).ready(function () {
+          //CheckBox mostrar contraseña
+          $('#ShowPassword').click(function () {
+            $('#Password').attr('type', $(this).is(':checked') ? 'text' : 'password');
+          });
+        });
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
