--- a/src/main/resources/templates/contenido.html
+++ b/src/main/resources/templates/contenido.html
@@ -59,7 +59,7 @@
                 <button type="button"  class="bi bi-gear" data-bs-toggle="dropdown" aria-expanded="false">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-light">
-                  <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar infromación</a></li>
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar información</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=2">Cambiar foto</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=3">Cambiar contraseña</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=4">Editar árbol</a></li>
