--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -55,6 +55,7 @@
             </div>
             <div class="d-flex ">
               <span class="nav-link" th:if="${session.usuariosession!=null}" th:text="${usuario.puntos + ' puntos'}"></span>
+          
             </div>
             <div class="d-flex ">
               <a class="cerrar" href="/logout">cerrar sesion</a>
@@ -65,7 +66,7 @@
                 <button type="button"  class="bi bi-gear" data-bs-toggle="dropdown" aria-expanded="false">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-light">
-                  <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar infromación</a></li>
+                  <li><a class="dropdown-item" href="/editarusuario?opcion=1">Editar información</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=2">Cambiar foto</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=3">Cambiar contraseña</a></li>
                   <li><a class="dropdown-item" href="/editarusuario?opcion=4">Editar árbol</a></li>
@@ -92,8 +93,8 @@
         
         <div class="col-md-7 datos">
           <h2 class="featurette-heading" th:if="${usuario!=null}" th:text="${usuario.nombre+ ' '+ usuario.apellido+', '+ usuario.edad+ ' años.'}"></h2>
-          <p class="lead" th:if="${usuario.descripcion==null}"> Agregue descripcion desde configuraciones <i class="bi bi-gear" ></i></p> 
-          <p class="lead" th:if="${usuario.descripcion!=null}" th:text="${usuario.descripcion}"></p>
+          <p class="lead descripcion" th:if="${usuario.descripcion==null}"> Agregue descripcion desde configuraciones <i class="bi bi-gear" ></i></p> 
+          <p class="lead descripcion" th:if="${usuario.descripcion!=null}" th:text="${usuario.descripcion}"></p>
         </div>
       </div>
     </div>
@@ -114,11 +115,13 @@
               </div>
 
               <div class="botonregar col">
+                <div class="descripcion">
                 <i class="negrita ">Nombre: </i><i th:text="${usuario.arbol.nombre}" ></i> <br>
                 <i class="negrita">Puntos del àrbol: </i><i th:text="${usuario.arbol.puntos}"></i> /42 <br>
-                <a href="/regar" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
-                <p class="negrita leyenda">"El arbol crecerá cada 6 puntos"</p>
-              
+                <p class="negrita">"El arbol crecerá cada 6 puntos"</p>
+              </div>
+              <a href="/regar" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
+
                 <div class="alert alert-danger" role="alert" th:if="${error}!=null">
                   <p th:text="${error}"></p>
                </div>
