--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -62,7 +62,7 @@
               <legend><strong>Registrate para cambiar el mundo</strong></legend>
               <div class="mb-3">
                 <label for="disabledTextInput"  class="form-label">Nombre</label>
-                <input type="text" id="disabledTextInput" name="nombre" th:value="*{nombre}"  class="form-control" placeholder="example:juanito">
+                <input type="text"  name="nombre" th:value="*{nombre}"  class="form-control" placeholder="example:juanito">
               </div>
               <div class="mb-3">
                 <label for="disabledTextInput" class="form-label">Apellido</label>
@@ -83,8 +83,9 @@
                   <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
                 </div>
           </div>
-                <div id="passwordHelpBlock" class="form-text">
-                  Su contraseña debe tener mas de 3 caracteres, contener letras y números, y no debe contener espacios, caracteres especiales ni emoji.              </div>
+              <p>
+                  
+              </p>
               
               <div class="alert alert-success" role="alert" th:if="${exito}!=null">
                 <p th:text="${exito}"></p>
